Optimized imports and stopped using Immutable list, set and map